# system-process-controller

./: LICENSE  README.md  process_controller.py  pyproject.toml  setup.py
.github/workflows/: run_tests.yml
process_controller/: __init__.py  controller.py  process_controller.py
tests/: test_process_controller.py  unit_tests.py
tests/data/: test_script.py
