[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "process-controller"
version = "0.5.0"
description = "A lightweight system process controller library"
authors = [{ name = "Yousef AlShaikh", email = "yousefalshaikh17@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "psutil"
]

[tool.setuptools]
packages = ["process_controller"]
